# liquidity-backend-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  aliases.js  artillery.yml  index.html  search-index.js  settings.html  source-files.js
async_trait/: all.html  attr.async_trait.html  index.html
backend/: index.html
backend_rust/: all.html  index.html  sidebar-items.js
buf_redux/: all.html  fn.copy_buf.html  fn.set_drop_err_handler.html  index.html  macro.do_read.html  macro.flush_amt.html  struct.BufReader.html  struct.BufWriter.html  struct.Buffer.html  struct.IntoInnerError.html  struct.LineWriter.html  struct.Unbuffer.html
diesel/: all.html  index.html  macro.allow_tables_to_appear_in_same_query.html  macro.diesel_infix_operator.html  macro.diesel_postfix_operator.html  macro.diesel_prefix_operator.html  macro.impl_query_id.html  macro.joinable.html  macro.no_arg_sql_function.html  macro.not_none.html  macro.numeric_expr.html  macro.operator_allowed.html  macro.sql_function.html  macro.table.html
diesel_derives/: all.html
dotenv/: all.html  enum.Error.html  fn.dotenv.html  fn.dotenv_iter.html  fn.from_filename.html  fn.from_filename_iter.html  fn.from_path.html  fn.from_path_iter.html  fn.var.html  fn.vars.html  index.html  type.Result.html
dtoa/: fn.write.html  index.html  trait.Floating.html
env_logger/: struct.Builder.html  struct.Env.html  struct.Logger.html
eventstore/: all.html  enum.OperationError.html  index.html  sidebar-items.js  struct.Connection.html  struct.ConnectionBuilder.html
futures/: all.html  index.html  macro.join.html  macro.select.html  macro.try_join.html  sidebar-items.js
futures_executor/: all.html  fn.block_on.html  fn.block_on_stream.html  index.html  struct.BlockingStream.html  struct.LocalPool.html  struct.LocalSpawner.html
futures_io/: enum.ErrorKind.html  struct.Error.html
futures_macro/: all.html  derive.proc_macro_hack_join.html  derive.proc_macro_hack_select.html  derive.proc_macro_hack_try_join.html  index.html
futures_task/: enum.Poll.html  struct.LocalFutureObj.html  struct.SpawnError.html
futures_util/: all.html  index.html  macro.select.html  sidebar-items.js
h2/: struct.Reason.html  struct.StreamId.html
headers/: all.html  index.html  struct.AcceptRanges.html  struct.AccessControlAllowCredentials.html  struct.AccessControlAllowHeaders.html  struct.AccessControlAllowMethods.html  struct.AccessControlAllowOrigin.html  struct.AccessControlExposeHeaders.html  struct.AccessControlMaxAge.html  struct.AccessControlRequestHeaders.html  struct.AccessControlRequestMethod.html  struct.Allow.html  struct.Authorization.html  struct.CacheControl.html  struct.Connection.html  struct.ContentDisposition.html  struct.ContentEncoding.html  struct.ContentLength.html  struct.ContentLocation.html  struct.ContentRange.html  struct.ContentType.html  struct.Cookie.html  struct.Date.html  struct.ETag.html  struct.Error.html  struct.Expect.html  struct.Expires.html  struct.Host.html  struct.IfMatch.html  struct.IfModifiedSince.html  struct.IfNoneMatch.html  struct.IfRange.html  struct.IfUnmodifiedSince.html  struct.LastModified.html  struct.Location.html  struct.Origin.html  struct.Pragma.html  struct.ProxyAuthorization.html  struct.Range.html  struct.Referer.html  (+15 more)
headers_core/: all.html  index.html  struct.Error.html  struct.HeaderName.html  struct.HeaderValue.html  trait.Header.html
hostname/: all.html  fn.get.html  fn.get_hostname.html  fn.set.html  index.html  sidebar-items.js
hyper/: all.html  struct.Body.html  struct.HeaderMap.html  struct.Method.html  struct.Request.html  struct.StatusCode.html  struct.Uri.html  struct.Version.html
hyper_tls/: enum.MaybeHttpsStream.html  struct.HttpsConnecting.html  struct.TlsStream.html
idna/: all.html  fn.domain_to_ascii.html  fn.domain_to_unicode.html  index.html
input_buffer/: all.html  constant.MIN_READ.html  index.html  struct.DoRead.html  struct.InputBuffer.html  struct.SizeLimit.html
juniper/: all.html  (+56 more)
liquidity/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Connection.html  struct.Credentials.html  struct.Uuid.html  trait.Loggable.html  trait.Merge.html  type.Error.html
liquidity/context/: index.html  sidebar-items.js  struct.Context.html  struct.User.html  trait.Context.html
liquidity/db/: enum.DatabaseError.html  enum.EventType.html  enum.OperationError.html  index.html  sidebar-items.js  struct.StupidConnectionWrapper.html  trait.DbConnection.html  trait.ESResultExt.html
liquidity/db/connection/: enum.EventType.html  trait.DbConnection.html
liquidity/permissions/: enum.PermissionError.html  fn.check.html  index.html  sidebar-items.js
liquidity/src/: context.rs  db.rs  lib.rs  permissions.rs
liquidity/src/db/: connection.rs  mod.rs
liquidity_elections/: Cargo.toml  all.html  index.html  sidebar-items.js
liquidity_elections/repository/: fn.create_election.html  fn.find_election.html  fn.update_election.html  index.html  sidebar-items.js  struct.ElectionRepository.html
liquidity_elections/resolvers/: index.html  sidebar-items.js  struct.ElectionResolvers.html
liquidity_elections/resolvers/mutation/: fn.create_election.html  fn.edit_election.html  index.html  sidebar-items.js
liquidity_elections/resolvers/query/: fn.election.html  index.html  sidebar-items.js
liquidity_elections/schema/: enum.Importance.html  index.html  sidebar-items.js  struct.Election.html  struct.ElectionInput.html  struct.PermissionSet.html
liquidity_elections/src/: lib.rs  models.rs  repository.rs  resolvers.rs  schema.rs
liquidity_macros/: Cargo.toml  all.html  attr.authorized.html  index.html  sidebar-items.js
liquidity_macros/src/: lib.rs
liquidity_macros/tests/: authorized.rs
liquidity_server/: .gitignore  Cargo.toml  Dockerfile  README.md  all.html  artillery.yml  index.html
liquidity_server/src/: auth.rs  integration.rs  main.rs  mutation.rs  query.rs  test.rs
liquidity_test_utils/: Cargo.toml  all.html  index.html
liquidity_test_utils/connection/: index.html  struct.MockConnection.html
liquidity_test_utils/src/: connection.rs  lib.rs
(+9350 files in other folders)
