[package]
name = "backend-rust"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.1"
hyper = "0.12.33"
juniper_hyper = "0.5.1"
chrono = "0.4.10"
pretty_env_logger = "0.3.1"
futures = "0.1"
jwks-client = "0.1.6"
dotenv = "0.15.0"
failure = "0.1.6"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "r2d2", "uuidv07"]}
r2d2 = "0.8.7"
uuid = "0.7"
serde_json = "1.0.44"
serde = "1.0.103"