[package]
name = "backend-rust"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[lib]
name = "backend_rust"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.1"
hyper = "0.12.33"
juniper_hyper = "0.5.1"
chrono = { version = "0.4.10", features = ["serde"]}
pretty_env_logger = "0.3.1"
futures = "0.1"
jwks-client = "0.1.6"
dotenv = "0.15.0"
failure = "0.1.6"
uuid = "0.7"
serde_json = "1.0.44"
serde = "1.0.104"
eventstore = "0.5.0"
log = "0.4.8"