[package]
name = "backend-rust"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[lib]
name = "backend_rust"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"]}
pretty_env_logger = "0.3.1"
futures = {version = "0.3", features = ["compat"]}
jwks-client = "0.1.8"
dotenv = "0.15.0"
failure = "0.1.6"
uuid = "0.7"
serde_json = "1.0.44"
serde = "1.0.104"
eventstore = "0.5.0"
log = "0.4.8"
tokio = { version = "0.2", features = ["full"]}
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
warp = "0.1.20"