[package]
name = "liquidity"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"
description = "Shared types and dependencies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventstore = "0.5.1"
uuid = "0.7"