[package]
name = "liquidity"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"
description = "Shared types and dependencies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventstore = { git = "https://github.com/YoEight/eventstore-rs.git" }
uuid = { version = "0.8", features = ["v4", "serde"]}
serde = "1"
serde_json = "1"
async-trait = "0.1"
futures = { version = "0.3" }
tracing = "0.1"
tracing-futures = "0.2"
juniper = { git = "https://github.com/wingertge/juniper.git", branch = "hyper-0.13", features = ["async"] }