[package]
name = "liquidity_elections"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["compat"]}
liquidity = { path = "../liquidity" }
eventstore = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
chrono = {version = "0.4", features = ["serde"]}
serde = "1"
serde_json = "1"
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }