[package]
name = "liquidity_elections"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["compat", "std", "alloc"]}
liquidity = { path = "../liquidity" }
eventstore = { git = "https://github.com/YoEight/eventstore-rs.git", branch = "new-futures" }
tracing = "0.1"
tracing-futures = "0.2"
chrono = {version = "0.4", features = ["serde"]}
serde = "1"
serde_json = "1"
juniper = { git = "https://github.com/wingertge/juniper.git", branch = "hyper-0.13", features = ["async"] }
ttl_cache = "0.5"

[dev-dependencies]
tokio-test = "0.2.0"
liquidity_test_utils = { path = "../liquidity_test_utils" }