[package]
name = "liquidity_macros"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquidity = { path = "../liquidity" }

syn = { version = "1", features = ["full"] }
quote = "1"

[dev-dependencies]
liquidity_test_utils = { path = "../liquidity_test_utils" }