[package]
name = "liquidity_server"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[[bin]]
name = "liquidity_server"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2", features = ["macros"]}
futures = "0.3" # Required because of juniper macros

dotenv = "0.15.0"
env_logger = "0.7.1"
parse_duration = "2"

liquidity = {path = "../liquidity"}
liquidity_api = {path = "../liquidity_api"}

warp = "0.1.20"
jwks-client = "0.2"

juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }

# Tracing
opentelemetry = "0.1.5"
tracing = "0.1.11"
tracing-subscriber = "0.2.0-alpha.2"
tracing-futures = "0.2.0"
tracing-opentelemetry = "0.1.0"