[package]
name = "liquidity_test_utils"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquidity = { path = "../liquidity" }
async-trait = "0.1"
serde = "1"
serde_json = "1"